--- a/index.html
+++ b/index.html
@@ -2,51 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Background and Education</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 40px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        p {
-            margin: 20px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>Restaurant webpage</title>
 </head>
 <body>
-    <div class="container">
-        <h1>About Me</h1>
-        <h2>Background</h2>
-        <p>Here you can write about your background including where you grew up, your early education, and any other experiences that have shaped you.</p>
-        
-        <h2>Education</h2>
-        <p>List your educational history here. For example:</p>
-        <ul>
-            <li>Bachelor of Science in Computer Science - University Name, Graduation Year</li>
-            <li>Master of Science in Information Technology - University Name, Graduation Year</li>
-        </ul>
-        
-        <h2>Professional Skills</h2>
-        <p>Describe your professional skills and any areas of proficiency. For example:</p>
-        <ul>
-            <li>Advanced knowledge of programming languages such as Java, Python, and C++.</li>
-            <li>Proficient in web development technologies including HTML, CSS, and JavaScript.</li>
-            <li>Experienced with database management systems like MySQL and MongoDB.</li>
-        </ul>
+    <div class="banner">
+        <div class="navbar">
+            <img src="logo1.png" alt="logo" class="logo">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Our menu</a></li>
+                <li><a href="">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>Visit our Restaurant</h1>
+            <p>To taste delicious food</p>
+<div>
+    <button type="button">Order Now</button>
+</div>
+
+        </div>
+
     </div>
 </body>
 </html>
