--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
         <div class="navbar">
             
             <ul>
+                <li><a href="">Deekshitha Kadiyala</a></li>
+                <li><                           ></li>
                 <li><a href="">Home</a></li>
-                <li><a href="">About us</a></li>
-                <li><a href="">Our menu</a></li>
-                <li><a href="">Contact us</a></li>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Classifications</a></li>
+                <li><a href="">Certification</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact Me</a></li>
             </ul>
         </div>
         <div class="content">
