--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script>
                 function sendEmail() {
 
-                        var link = "mailto:mnagulavancha.jobs@gmail.com"
+                        var link = "mailto:deekshitha0211@gmail.com"
                             + "?&subject=" + encodeURIComponent(document.getElementById('subject').value)
                             + "&body=" + encodeURIComponent(document.getElementById('message').value);
 
